--- a/SmartHomeApp/app/src/main/res/values/strings.xml
+++ b/SmartHomeApp/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="prompt_username">Username</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Login</string>
+    <string name="action_load_house_config">Load House Configuration</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
@@ -14,4 +16,9 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <!-- Strings related to contentDescriptions of images -->
+    <string name="logo_content_description">Logo Image</string>
+
+
 </resources>
