--- a/SmartHomeApp/app/src/main/res/values/strings.xml
+++ b/SmartHomeApp/app/src/main/res/values/strings.xml
@@ -10,7 +10,6 @@
     <string name="menu_settings">Settings</string>
 
 
-
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_username">Username</string>
@@ -28,6 +27,9 @@
 
     <!-- Strings related to contentDescriptions of images -->
     <string name="logo_content_description">Logo Image</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
