--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="menu_control">Control</string>
     <string name="menu_settings">Settings</string>
 
+    <string name="header_devices">Devices</string>
 
     <!-- Login Screen -->
     <string name="prompt_email">Email</string>
